@@ -1,6 +1,5 @@
-# == Class: named
+# @summary Configures named for execution on a system taking selinux into account.
 #
-# This class configures named for execution on a system using selinux.
 # It pulls all config files from rsync.
 #
 # You will need to ensure that rsync is serving out the appropriate space so
@@ -41,9 +40,19 @@
 #
 #   * Value in module data
 #
+# @param chroot
+#   Toggle the use of chroot and override the autodetected setting to be
+#   compatible with SELinux.
+#
+#   * WARNING: If you have an SELinux enabled system, forcing the chroot may
+#     cause named to become non-functional.
+#
 # @param bind_dns_rsync
 #   The target under "${rsync_base}/bind_dns" from which to fetch all
 #   BIND DNS content.
+#
+# @param firewall
+#   Enable SIMP firewall management
 #
 # @param rsync_server
 #   The rsync server from which to pull the named configuration.
@@ -51,14 +60,20 @@
 # @param rsync_timeout
 #   The timeout when connecting to the rsync server.
 #
+# @param sebool_named_write_master_zones
+#   If you need to use dynamic DNS or zone transfers, and are using SELinux,
+#   you will need to set this to ``true``
+#
 # @author https://github.com/simp/pupmod-simp-named/graphs/contributors
 #
 class named (
-  Stdlib::Absolutepath     $chroot_path,
-  String                   $bind_dns_rsync  = 'default',
-  String                   $rsync_server    = simplib::lookup('simp_options::rsync::server', { 'default_value'  => '127.0.0.1' }),
-  Stdlib::Compat::Integer  $rsync_timeout   = simplib::lookup('simp_options::rsync::timeout', { 'default_value' => '2' }),
-  Boolean                  $firewall        = simplib::lookup('simp_options::firewall', { 'default_value' => false })
+  Stdlib::Absolutepath    $chroot_path,
+  Boolean                 $chroot                          = !pick($facts['selinux_enforced'], false),
+  String                  $bind_dns_rsync                  = 'default',
+  Boolean                 $firewall                        = simplib::lookup('simp_options::firewall', { 'default_value' => false }),
+  String                  $rsync_server                    = simplib::lookup('simp_options::rsync::server', { 'default_value' => '127.0.0.1' }),
+  Stdlib::Compat::Integer $rsync_timeout                   = simplib::lookup('simp_options::rsync::timeout', { 'default_value' => '2' }),
+  Boolean                 $sebool_named_write_master_zones = false
 ) {
 
   if defined(Class['named::caching']) {
@@ -69,15 +84,7 @@ class named (
 
   simplib::validate_net_list($rsync_server)
 
-  if ( str2bool($::selinux_enforced)) {
-    include 'named::non_chroot'
-    class { 'named::service': chroot => false }
-    class { 'named::install': chroot => false }
-
-    Class['named::install'] -> Class['named::non_chroot']
-    Class['named::non_chroot'] -> Class['named::service']
-  }
-  else {
+  if $chroot {
     include 'named::chroot'
     include 'named::service'
     include 'named::install'
@@ -85,8 +92,24 @@ class named (
     Class['named::install'] -> Class['named::chroot']
     Class['named::chroot'] -> Class['named::service']
   }
+  else {
+    include 'named::non_chroot'
+    class { 'named::service': chroot => false }
+    class { 'named::install': chroot => false }
+
+    Class['named::install'] -> Class['named::non_chroot']
+    Class['named::non_chroot'] -> Class['named::service']
+  }
 
   Class['named::install'] ~> Class['named::service']
+
+  if $facts['selinux_enforced'] {
+    $_selboolean_value = $sebool_named_write_master_zones ? {true => 'on', default => 'off'}
+    selboolean { 'named_write_master_zones':
+      persistent => true,
+      value      => $_selboolean_value
+    }
+  }
 
   if $firewall {
     iptables_rule { 'allow_dns_tcp':
