@@ -1,18 +1,40 @@
-# This class installs the appropriate packages for BIND based on the chroot
-# status
+# @summary Installs the appropriate packages for BIND based on the chroot status
 #
 # @private
 #
-# @param ensure [String] The `package` ensure setting for installed packages
+# @param ensure
+#   The `package` ensure setting for installed packages
+#
 #   @see https://docs.puppet.com/puppet/latest/reference/type.html#package-attribute-ensure
-# @param chroot [Boolean] Whether or not to use a chroot jail
-# @param chroot_path [Absolute_Path] The path to the chroot jail
+#
+# @param chroot
+#   Whether or not to use a chroot jail
+#
+# @param chroot_path
+#   The path to the chroot jail
 class named::install (
   Boolean              $chroot      = true,
   Stdlib::Absolutepath $chroot_path = $::named::chroot_path,
   String               $ensure      = simplib::lookup('simp_options::package_ensure', { 'default_value' => 'installed' }),
 ){
   assert_private()
+
+  package { 'bind': ensure => $ensure }
+  package { 'bind-libs': ensure => $ensure }
+
+  if $chroot {
+    package { 'bind-chroot': ensure => $ensure }
+  }
+  else {
+    package { 'bind-chroot': ensure => 'absent' }
+  }
+
+  file { '/var/named':
+    ensure => 'directory',
+    owner  => 'root',
+    group  => 'named',
+    mode   => '0750'
+  }
 
   group { 'named':
     ensure    => 'present',
@@ -27,17 +49,6 @@ class named::install (
     gid        => '25',
     home       => '/var/named',
     membership => 'inclusive',
-    shell      => '/sbin/nologin',
-    require    => Group['named']
-  }
-
-  package { 'bind': ensure => $ensure }
-  package { 'bind-libs': ensure => $ensure }
-
-  if $chroot {
-    package { 'bind-chroot': ensure => $ensure }
-  }
-  else {
-    package { 'bind-chroot': ensure => 'absent' }
+    shell      => '/sbin/nologin'
   }
 }
