@@ -1,4 +1,5 @@
-# This class configures named for execution on a system using selinux.
+# @summary Configures named for execution on a system taking selinux into account.
+#
 # It pulls all config files from rsync.
 #
 # It is meant to be called from named directly.
@@ -7,6 +8,15 @@
 #   The target under #
 #   /var/simp/environments/{environment}/rsync/{os}/{maj_version}/bind_dns
 #   from which to fetch all BIND DNS content.
+#
+# @param rsync_source
+#   The source from which the module will pull its files on the rsync server
+#
+# @param rsync_server
+#   The rsync server from which to pull the named configuration.
+#
+# @param rsync_timeout
+#   The timeout when connecting to the rsync server.
 #
 # @author https://github.com/simp/pupmod-simp-named/graphs/contributors
 #
@@ -22,10 +32,6 @@ class named::non_chroot (
 
   $_rsync_user = "bind_dns_${::named::bind_dns_rsync}_rsync_${::environment}_${facts['os']['name']}_${facts['os']['release']['major']}"
 
-  if ( str2bool($::selinux_enforced) != true ) {
-    fail( 'named::non_chroot must be used with selinux!')
-  }
-
   simplib::validate_net_list($rsync_server)
 
   file { '/etc/named.conf':
@@ -34,15 +40,6 @@ class named::non_chroot (
     group   => 'named',
     mode    => '0640',
     notify  => Rsync['named_etc'],
-    require => Package['bind']
-  }
-
-  file { '/var/named':
-    ensure  => 'directory',
-    owner   => 'root',
-    group   => 'named',
-    mode    => '0750',
-    notify  => Rsync['named'],
     require => Package['bind']
   }
 
